# spatialmath-python

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  2d_ellipse-1.py  2d_ellipse-2.py  2d_ellipse.html  2d_line.html  2d_linesegment.html  2d_orient_SO2.html  2d_polygon.html  2d_pose_SE2.html  2d_pose_twist.html  3d_dualquaternion.html  3d_line.html  3d_orient_SO3-1.py  3d_orient_SO3.html  3d_orient_unitquaternion.html  3d_plane.html  3d_plucker.html  3d_pose_SE3.html  3d_pose_dualquaternion.html  3d_pose_twist.html  3d_quaternion.html  6d_acceleration.html  6d_f6.html  6d_force.html  6d_inertia.html  6d_m6.html  6d_momentum.html  6d_spatial.html  6d_velocity.html  CNAME  MANIFEST.in  Makefile  README.md  TODO.md  classes-2d-1.py  classes-2d-2.py  (+45 more)
.github/: CODEOWNERS  CONTRIBUTORS.md  dev_requirements.txt
_images/: inheritance-029212f9aa62cb50c5507c7d59b991e25e4894e8.png.map  inheritance-038088352351efb82b37b3d92c9029bb39998993.png.map  inheritance-045c12015b5e928b3568fb30a12e8550cbab1027.png.map  inheritance-067a3960862690619352039e319448ebed8a09f5.png.map  inheritance-069cc2042d516e176b7afd3fdaba5244e4a5ed24.png.map  inheritance-0b5fb6b0c33ca801e3355ca1b2875331e5055fa3.png.map  inheritance-1cfa5732bda5a1c389687d03144b6a699ba7ce7c.png.map  inheritance-1e5ce9f11ca8095bbe55a61f3260bd54b25db75d.png.map  inheritance-1f24ed9105d40718ce7f5f6e659ca5f11433ea6d.png.map  inheritance-300693128585a33df949659afecf70b8f73244fb.png.map  inheritance-3cee4373f45461e517d622ef8aba995f7e641ef3.png.map  inheritance-3ef304a8bc96fc792d4666c6cbaefe0c73eb849b.png.map  inheritance-407202dde03ccb3c696ba3647d161f228dbce13a.png.map  inheritance-47bfc48556aad9829b2b86667bcffbbc1ccdbf51.png.map  inheritance-480d9a337088617da471bf081f5189e4d9e93101.png.map  inheritance-5989731694f50be0b089bc2a9fc20de01e5630b3.png.map  inheritance-5b404230ecb40ccf7b2a43d1b528632b9a912a5a.png.map  inheritance-5d93fa8eb4a576df99759879ece2788b132b86dc.png.map  inheritance-5e9b12cf0c42680f11d781731ac6bbd53b0ff4ce.png.map  inheritance-624b8221281df454d62b8e9c57352c86b6898588.png.map  inheritance-6820a4ced95a640723ea8a02c5ca803c17d74335.png.map  inheritance-6b9a6897aa36b1585dea408a7b9beb8b2b85b938.png.map  inheritance-714164192eb51ce6ea97c46ff3eaf40a52eea615.png.map  inheritance-74f63b837d8ae4d8ca3ecdbbfe1b0a394031cd26.png.map  inheritance-75cddd508946489c33d2721757c3a8f9efc2c771.png.map  inheritance-75de726498bbfca344796ac8bf4b7f01180e5269.png.map  inheritance-83404e5b162423c69d117d087cf2a937eb52859c.png.map  inheritance-87601fd326d188805dd4e5ecf14b3e32af162805.png.map  inheritance-91217ba8e98a48b06ff0a743c2aee3b98f075a0e.png.map  inheritance-917e2d762c3c8ad82e484ddd7a8922082f92240f.png.map  inheritance-937e4b33055eedad4b1ff20b70e2737d0231bec4.png.map  inheritance-93e9c4d1ba84c592638f9bee3588b4eef5d65caf.png.map  inheritance-94fa7ce771fd8a8397620d14d52391a229ade7cb.png.map  inheritance-9bd8c386e954922ad183518a373b09582b21b782.png.map  inheritance-9cceec63e7c63bcf23fdfc2393b1bde7d6e64229.png.map  inheritance-9f36cecbd748f70c1b298042081e5de211f161bf.png.map  inheritance-a42c52977ee87eba56fe85a282680b6fc51576ca.png.map  inheritance-a9ad2b033767e654ec499509ce4aa468d1ef6f55.png.map  inheritance-aa1fa65f5514c596ac49efe69597c6576c5241e9.png.map  inheritance-ab77ff8cf8bfc83fd78ebb53d45869aea278feb6.png.map  (+16 more)
_modules/: abc.html  collections.html  index.html
_sources/: 2d_ellipse.rst.txt  2d_line.rst.txt  2d_pose_twist.rst.txt  3d_line.rst.txt  3d_orient_unitquaternion.rst.txt  3d_plane.rst.txt  3d_pose_twist.rst.txt  3d_quaternion.rst.txt  6d_f6.rst.txt  6d_force.rst.txt  6d_inertia.rst.txt  6d_m6.rst.txt  6d_spatial.rst.txt  6d_velocity.rst.txt  func_2d.rst.txt  func_2d_graphics.rst.txt  func_3d.rst.txt  func_3d_graphics.rst.txt  func_animation.rst.txt  func_graphics.rst.txt  func_vector.rst.txt  functions.rst.txt  index.rst.txt  intro.rst.txt  spatialmath.rst.txt
_static/: documentation_options.js
base/: __init__.py  plot_test.py  quaternions.py  test_quaternion.py  test_transforms.py  transforms.py  transforms2d.py  transforms3d.py  transformsNd.py  vectors.py
doc/: .buildinfo  search.html
docs/: .buildinfo  Makefile  genindex.html  index.html  indices.html  intro.html  modules.html  py-modindex.html  search.html  searchindex.js  spatialmath.html  support.html
docsrc/: genindex.html  modules.html  objects.inv
notebooks/: gentle-introduction.ipynb  introduction.ipynb
spatialmath/: .coveragerc  DualQuaternion.py  Plucker.py  Twist.py  Twist2.py  __init__.py  baseposelist.py  baseposematrix.py  gentle-introduction.ipynb  geom2d.py  geom3d.py  introduction.ipynb  pose2d.py  pose3d.py  quaternion.py  smuserlist.py  spatialvector.py  spline copy.py  spline.py  super_pose.py  test_geom3d.py  test_pose2d.py  test_pose3d.py  test_quaternion.py  test_twist.py  test_twist2d.py  test_twist3d.py  timing.py  twist.py
(+159 files in other folders)
