[project]
name = "spatialmath-python"
version = "1.1.6"
authors = [
  { name="Peter Corke", email="rvc@petercorke.com" },
]
description = "Provides spatial maths capability for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "spatial-math", "spatial math",
    "SO2", "SE2", "SO3", "SE3",
    "SO(2)", "SE(2)", "SO(3)", "SE(3)",
    "twist", "product of exponential", "translation", "orientation",
    "angle-axis", "Lie group", "skew symmetric matrix",
    "pose", "translation", "rotation matrix", 
    "rigid body transform", "homogeneous transformation",
    "Euler angles", "roll-pitch-yaw angles",
    "quaternion", "unit-quaternion",
    "robotics", "robot vision", "computer vision",
]

dependencies = [
    "numpy>=1.17.4",
    "scipy",
    "matplotlib",
    "ansitable",
    "typing_extensions",
]

[project.urls]
"Homepage" = "https://github.com/petercorke/spatialmath-python"
"Bug Tracker" = "https://github.com/petercorke/spatialmath-python/issues"
"Documentation" = "https://petercorke.github.io/petercorke/spatialmath-python"
"Source" = "https://github.com/petercorke/petercorke/spatialmath-python"

[project.optional-dependencies]

dev = [
    "sympy",
    "pytest",
    "pytest-timeout",
    "pytest-xvfb",
    "coverage",
    "flake8"
]

docs = [
    "sphinx",
    "sphinx-rtd-theme", 
    "sphinx-autorun", 
    "sphinxcontrib-jsmath", 
    "sphinx-favicon",
    "sphinx-autodoc-typehints",
]

[build-system]

requires = ["setuptools", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

packages = [
    "spatialmath",
    "spatialmath.base",
]

[tool.black]
line-length = 88
target-version = ['py38']
exclude = "camera_derivatives.py"
